[gd_scene load_steps=2 format=3 uid="uid://d2juwc41hmqfg"]

[ext_resource type="Script" path="res://menu/options_menu/keybind_option.gd" id="1_xw8oi"]

[node name="KeybindOption" type="HBoxContainer"]
theme_override_constants/separation = 8
script = ExtResource("1_xw8oi")

[node name="Label" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "action"

[node name="Button1" type="Button" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
toggle_mode = true
text = "NA"

[node name="Button2" type="Button" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
toggle_mode = true
text = "NA"

[node name="Button3" type="Button" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
toggle_mode = true
text = "NA"
